--- a/script/Jenkinsfile
+++ b/script/Jenkinsfile
@@ -1,11 +1,13 @@
-pipeline{
+pipeline {
     agent any
-    tools{
+    tools {
         nodejs 'nodejs'
     }
-    stages('installing'){
-        steps{
-            sh 'npm install'
+    stages {
+        stage('installing') {
+            steps {
+                sh 'npm install'
+            }
         }
     }
 }
