--- a/script/Jenkinsfile
+++ b/script/Jenkinsfile
@@ -15,5 +15,10 @@ pipeline {
                 sh 'npm pack'
             }
         }
+        stage('artifact') {
+            steps {
+                sh 'curl -uadmin:AP6APkHxetchhfhHqpaawMctMhu -T /node/my-app-1.2.0.tgz "http://ec2-100-26-171-136.compute-1.amazonaws.com:8081/artifactory/steph_artifact/nodeapp"'
+            }
+        }
     }
 }
