--- a/script/Jenkinsfile
+++ b/script/Jenkinsfile
@@ -17,7 +17,7 @@ pipeline {
         }
         stage('artifact') {
             steps {
-                sh 'curl -uadmin:AP6APkHxetchhfhHqpaawMctMhu -T /node/my-app-1.2.0.tgz "http://ec2-100-26-171-136.compute-1.amazonaws.com:8081/artifactory/steph_artifact/nodeapp"'
+                sh 'curl -uadmin:AP6APkHxetchhfhHqpaawMctMhu -T my-app-1.2.0.tgz "http://ec2-100-26-171-136.compute-1.amazonaws.com:8081/artifactory/steph_artifact/nodeapp"'
             }
         }
     }
